added map and activating live adding location

--- a/client/earlybird/template.html
+++ b/client/earlybird/template.html
@@ -1,5 +1,5 @@
 <template name="earlybird">
-    <form method="post">
+    <form method="post" id="earlybird">
         <input type="email" name="email" placeholder="Enter your email address" required>
         {{#if confirmation}}
         <input class="valid" type="submit" value="Thank you!" disabled>
