improved home design

--- a/client/layout.html
+++ b/client/layout.html
@@ -1,5 +1,6 @@
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Make the world your workplace - Webnomad</title>
   <meta name="description" content="Find a local place to work, get connected to other remote workers." />
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,900,900italic' rel='stylesheet' type='text/css' />
