--- a/client/locations/template.html
+++ b/client/locations/template.html
@@ -1,5 +1,7 @@
 <template name="locations">
-  <div class="map"></div>
+  <div class="map" width="100%" height="500">
+    <p>Let's find you!</p>
+  </div>
 
   <form method="post">
     <h2>Add a location</h2>
