fixed map loading and position

--- a/client/locations/template.html
+++ b/client/locations/template.html
@@ -1,6 +1,6 @@
 <template name="locations">
-  <div class="map" width="100%" height="500">
-    <p>Let's find you!</p>
+  <div id="map-canvas">
+    <p>We need to know where you are to suggest places around you or allow you to add your current location as a new spot!</p>
   </div>
 
   <form method="post">
