moving to Polymer

--- a/client/locations/add.html
+++ b/client/locations/add.html
@@ -1,7 +1,5 @@
-<template name="locations">
-  <div id="map-canvas">
-    <p>We need to know where you are to suggest places around you or allow you to add your current location as a new spot!</p>
-  </div>
+<template name="locations/add">
+  <h1>Add a location</h1>
 
   <form method="post">
     <h2>Add a location</h2>
