--- a/client/layout.html
+++ b/client/layout.html
@@ -6,7 +6,13 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,900,900italic' rel='stylesheet' type='text/css' />
   <link rel="stylesheet" type="text/css" href="layout.css" />
 
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiKD-uSteYf-XzBi_bVQD5781YXOfnkSY"></script>
+  <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+
+  <link rel="import" href="bower_components/iron-icons/iron-icons.html">
+  <link rel="import" href="bower_components/polymer/polymer.html">
+  <link rel="import" href="bower_components/google-map/google-map.html">
+  <link rel="import" href="bower_components/iron-icon/iron-icon.html">
+  <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
 </head>
 
 <body>
