--- a/client/locations/list.html
+++ b/client/locations/list.html
@@ -1,6 +1,14 @@
 <template name="locations">
-  <google-map id="mapcanvas" latitude="37.77493" longitude="-122.41942">
+  <google-map id="mapcanvas" latitude="37.77493" longitude="-122.41942" zoom="2">
     <p>We need to know where you are to suggest places around you or allow you to add your current location as a new spot!</p>
+    {{#each locations}}
+      <google-map-marker {{locationToAttributes location=this}}>
+        <h1>{{name}}</h1>
+      </google-map-marker>
+    {{/each}}
   </google-map>
   <paper-icon-button icon="add" class="add" title="Add your location">+ Add your location</paper-icon-button>
+  <section>
+
+  </section>
 </template>
