added cancel button when adding a location

--- a/client/locations/add.html
+++ b/client/locations/add.html
@@ -27,12 +27,15 @@
         <input type="hidden" placeholder="longitude" name="lng" />
       </li>
       <li>
-      <paper-button type="submit">
-        <iron-icon icon="add"></iron-icon>
-        Add this location
-      </paper-button>
+        <paper-button type="submit">
+          <iron-icon icon="add"></iron-icon>
+          Add this location
+        </paper-button>
 
-
+        <paper-button type="cancel">
+          <iron-icon icon="cancel"></iron-icon>
+          Cancel
+        </paper-button>
       </li>
     </ul>
   </form>
