fixed google maps moving it to an element. This is a workaround as https://github.com/GoogleWebComponents/google-map/issues/180

--- a/client/home.html
+++ b/client/home.html
@@ -3,7 +3,7 @@
         <h1>WebNomad</h1>
         <h2>Make the world your workplace.</h2>
         <section class="earlybird">
-            <p>Do you want an account before everyone else? We are looking for <strong>VIP beta users</strong>.</p>
+            <p>Do you want an account before everyone else? We are looking for <strong>private beta users</strong>.</p>
             <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
             {{>earlybird}}
         </section>
