--- a/client/layout.html
+++ b/client/layout.html
@@ -11,9 +11,9 @@
   <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
   <link rel="import" href="/bower_components/iron-icon/iron-icon.html">
   <link rel="import" href="/bower_components/polymer/polymer.html">
-  <link rel="import" href="/bower_components/google-map/google-map.html">
   <link rel="import" href="/bower_components/paper-button/paper-button.html">
   <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
+  <link rel="import" href="/elements/project-map.html">
 </head>
 
 <body>
