--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 
   <body>
     <template id="app" is="dom-bind">
-      <leaflet-map fit-to-markers>
+      <leaflet-map max-zoom=18 fit-to-markers>
         <template is="dom-repeat" items="[[locations]]">
           <leaflet-marker longitude="[[item.position.longitude]]" latitude="[[item.position.latitude]]" title="[[item.name]]">
             <h1>[[item.name]]</h1>
-            <a href="/workplace/[[item._id]]">Focus here</a>
           </leaflet-marker>
         </template>
 
@@ -106,17 +105,17 @@
         evt.target.removeEventListener(evt.type, arguments.callee)
         var lmap = document.querySelector('leaflet-map')
         var location = evt.detail
-        lmap.latitude = location.latitude
-        lmap.longitude = location.longitude
-        lmap.zoom = 16
         setTimeout(function() {
+          lmap.latitude = location.latitude
+          lmap.longitude = location.longitude
+          lmap.zoom = 16
           var userMarker = document.querySelector('#user-marker')
           userMarker.icon = L.icon({
               "iconUrl": "images/position.png",
               "iconSize": L.point(26, 25),
               "iconAnchor": L.point(13, 13)
           });
-        }, 0)
+        }, 10)
       }
 
       var geolocation = document.querySelector('leaflet-geolocation')
