--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="stylesheet" href="./css/main.css" charset="utf-8">
+    <link rel="stylesheet" href="./css/large.css" media="(min-width: 800px)">
 
     <link rel="import" href="./bower_components/iron-form/iron-form.html">
     <link rel="import" href="./bower_components/leaflet-map/leaflet-map.html">
     <link rel="import" href="./bower_components/iron-icons/iron-icons.html">
     <link rel="import" href="./bower_components/paper-dialog/paper-dialog.html">
+    <link rel="import" href="./bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
     <link rel="import" href="./bower_components/paper-button/paper-button.html">
     <link rel="import" href="./bower_components/paper-icon-button/paper-icon-button.html">
     <link rel="import" href="./bower_components/paper-toast/paper-toast.html">
@@ -56,8 +58,8 @@
             <input type=range name="wifi" min=0 max=5 value=3 id="wifi">
           </div>
           <div>
-              <input name="power" type="checkbox">
-              <label>Power is available</label>
+              <input name="power" type="checkbox" id="power-available">
+              <label for="power-available">Power is available</label>
           </div>
           <div>
             <label for="name">Type of place</label>
@@ -72,7 +74,7 @@
             <textarea name="comment"></textarea>
           </div>
           <div>
-            <label for="name">Who are you?</label>
+            <label for="name">Your nickname</label>
             <input type=text name="author">
           </div>
           <div class="buttons">
