--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>There's no place home like the World - Webnomad</title>
+    <title>Make the World your Workplace - Webnomad</title>
+    <meta name="description" content="Find a internet cafe hotspot where to work next to where you are. Contribute to the open map of the best internet work places.">
 
     <script src="bower_components/ddp.js/src/ddp.js"></script>
     <script src="bower_components/q/q.js"></script>
